--- a/public/locales/italian/translation.json
+++ b/public/locales/italian/translation.json
@@ -1,5 +1,5 @@
 {
-  "ExampleComponent": {
+  "RegForm2": {
     "fieldOne": "Cliccami!",
     "fieldTwo": "No, cliccami!",
     "goToPage": "Vai a un'altra pagina"
