feat: restored reset password, added redirect from registration form to login and vice versa

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,6 +43,7 @@
     "click": "Click here! ",
     "continueWithGoogle": "Continue with Google",
     "continue": "Continue",
+    "save": "Save",
     "role": "Role",
     "enterRole":"Enter role...",
     "specialization":"Specialization",
