feat: added forgot password form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,7 @@
     "forgotPasswordTitle": "Forgot Password",
     "forgotPasswordText": "Enter your email and we’ll send you a link to reset your password",
     "forgotPasswordLink": "Forgot the password?",
+    "backToLogin": "Back to Login",
     "resetPasswordTitle": "Reset Password",
     "resetPasswordText": "Please create a new password that you don’t use on any other site",
     "haventAnAccount": "Don’t  have an account? ",
@@ -44,6 +45,7 @@
     "continueWithGoogle": "Continue with Google",
     "continue": "Continue",
     "save": "Save",
+    "submit": "Submit",
     "role": "Role",
     "enterRole":"Enter role...",
     "specialization":"Specialization",
