--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,7 +57,7 @@
     "enterSpecialization":"Enter specialization...",
     "gender":"Gender",
     "enterGender":"Enter your gender...",
-    "birthDate":"Date of birth",
+    "birthDate":"Date of Birth",
     "enterDateOfBirth": "dd/mm/yyyy",
     "country":"Country",
     "enterCountry":"Enter your country...",
@@ -81,7 +81,35 @@
     "passwordsDoesNotMatch": "*Passwords does not match",
     "fieldRequired": "*Field is required",
     "mustContain": "*Must Contain",
-    "charactersUppercaseLowercase": "Characters, One Uppercase, One Lowercase"
+    "charactersUppercaseLowercase": "Characters, One Uppercase, One Lowercase",
+    "overviewRequired": "*Overview is required"
+  },
+  "Patient": {
+    "createPatientCard": "Create patient's card",
+    "firstName": "First Name",
+    "enterFirstName": "Enter patient's first name...",
+    "lastName": "Last Name",
+    "enterLastName": "Enter patient's last name",
+    "email": "Email",
+    "enterEmail": "Enter patient's email",
+    "phoneNumber": "Phone Number",
+    "enterPhoneNumber": "Enter patient's phone Number",
+    "gender":"Gender",
+    "enterGender":"Enter patient's gender",
+    "birthDate":"Date of Birth",
+    "enterBirthDate":"Enter patient's date of Birth",
+    "country":"Country",
+    "enterCountry":"Enter patient's country",
+    "city":"City",
+    "enterCity":"Enter patient's city",
+    "address":"Address",
+    "enterAddress":"Enter patient's address",
+    "timeZone":"Time Zone",
+    "enterTimeZone":"Enter patient's time Zone",
+    "overview": "Overview",
+    "enterOverview": "Enter patient's overview",
+    "save": "Save",
+    "cancel": "Cancel"
   }
 }
 
