--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -51,6 +51,7 @@
     "continue": "Continue",
     "save": "Save",
     "submit": "Submit",
+    "cancel": "Cancel",
     "role": "Role",
     "enterRole":"Enter role...",
     "specialization":"Specialization",
@@ -81,7 +82,15 @@
     "passwordsDoesNotMatch": "*Passwords does not match",
     "fieldRequired": "*Field is required",
     "mustContain": "*Must Contain",
-    "charactersUppercaseLowercase": "Characters, One Uppercase, One Lowercase"
+    "charactersUppercaseLowercase": "Characters, One Uppercase, One Lowercase",
+    "bothDatesRequired": "Validation error: both start and end dates are required",
+    "endBeforeStartDateError": "Validation error: end date should be after start date"
+  },
+  "Calendar": {
+    "endTime": "End time:",
+    "startTime": "Start time:",
+    "selectTime": "Select a time range",
+    "selectedDate": "Selected date:"
   }
 }
 
