Sarch form, AddButton
1. ViewLink
2. ISearch
3. AddButton

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -113,6 +113,11 @@
   },
   "PatientCard": {
     "overview:": "Overview:",
-    "lastAppointment": "Last Appointment:"
+    "lastAppointment": "Last Appointment:",
+    "viewProfile": "View Profile"
+  },
+  "Patients": {
+    "createPatient": "Create Patient",
+    "search": "Search"
   }
 }
