--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -114,7 +114,8 @@
     "overview": "Overview",
     "enterOverview": "Enter patient's overview",
     "save": "Save",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "lastAppointment": "Last Appointment:"
   },
   "Profile": {
     "cancel": "Cancel",
