feat: LoadMore Button
1. LoadMoreButton
2. EditCardLink

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -118,6 +118,9 @@
   },
   "Patients": {
     "createPatient": "Create Patient",
-    "search": "Search"
+    "viewCard": "View card",
+    "editCard": "Edit card",
+    "search": "Search",
+    "loadMore": "Load More"
   }
 }
