feat: connect scheduler fe with be

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -138,7 +138,8 @@
     "selectedDate": "Selected date:",
     "deleteTime": "Delete time:",
     "saveSchedule": "Save schedule",
-    "selectTimezone": "Time Zone:"
+    "selectTimezone": "Time Zone:",
+    "successfullySubmited": "Your schedule has been successfully updated!"
   }
 }
 
