feat: add logout modal and function

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,6 +12,8 @@
     "signIn": "Sign In",
     "logIn": "Log In",
     "logOut": "Log Out",
+    "logoutTitle": "Logout",
+    "logoutText": "Are you sure you want to log out?",
     "loginTitle": "Login",
     "loginText": "Please, login into your medical account",
     "activationText": "You have successfully verified your account. In order to enter the system, please go to the login form",
@@ -52,6 +54,7 @@
     "save": "Save",
     "submit": "Submit",
     "cancel": "Cancel",
+    "confirm": "Confirm",
     "delete": "Delete",
     "role": "Role",
     "enterRole":"Enter role...",
