--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,12 +54,12 @@
     "cancel": "Cancel",
     "delete": "Delete",
     "role": "Role",
-    "enterRole":"Enter role...",
-    "specialization":"Specialization",
-    "enterSpecialization":"Enter specialization...",
-    "gender":"Gender",
-    "enterGender":"Enter your gender...",
-    "birthDate":"Date of Birth",
+    "enterRole": "Enter role...",
+    "specialization": "Specialization",
+    "enterSpecialization": "Enter specialization...",
+    "gender": "Gender",
+    "enterGender": "Enter your gender...",
+    "birthDate": "Date of Birth",
     "enterDateOfBirth": "dd/mm/yyyy",
     "country": "Country",
     "enterCountry": "Enter your country...",
@@ -100,18 +100,18 @@
     "enterEmail": "Enter patient's email",
     "phoneNumber": "Phone Number",
     "enterPhoneNumber": "Enter patient's phone Number",
-    "gender":"Gender",
-    "enterGender":"Enter patient's gender",
-    "birthDate":"Date of Birth",
-    "enterBirthDate":"Enter patient's date of Birth",
-    "country":"Country",
-    "enterCountry":"Enter patient's country",
-    "city":"City",
-    "enterCity":"Enter patient's city",
-    "address":"Address",
-    "enterAddress":"Enter patient's address",
-    "timeZone":"Time Zone",
-    "enterTimeZone":"Enter patient's time Zone",
+    "gender": "Gender",
+    "enterGender": "Enter patient's gender",
+    "birthDate": "Date of Birth",
+    "enterBirthDate": "Enter patient's date of Birth",
+    "country": "Country",
+    "enterCountry": "Enter patient's country",
+    "city": "City",
+    "enterCity": "Enter patient's city",
+    "address": "Address",
+    "enterAddress": "Enter patient's address",
+    "timeZone": "Time Zone",
+    "enterTimeZone": "Enter patient's time Zone",
     "overview": "Overview",
     "enterOverview": "Enter patient's overview",
     "save": "Save",
@@ -140,7 +140,22 @@
     "deleteTime": "Delete time:",
     "saveSchedule": "Save schedule",
     "selectTimezone": "Time Zone:"
+  },
+
+  "Notes": {
+    "downloadAnAttachedFile": "Download an attached file",
+    "show": "Show",
+    "dr": "Dr.",
+    "theNoteShouldContainAtLeastSymbols": "The note should contain at least 10 symbols",
+    "hint": "Hint",
+    "description": "Description",
+    "add": "Add",
+    "addAppointmentNote": "Add appointment note",
+    "discardAdding": "Discard adding",
+    "loadMore": "Load More",
+    "Draganddropyourfilesanywhereor": "Drag and drop your files anywhere or",
+    "Upload": "Upload",
+    "ToUpload": "To Upload",
+    "Search": "Search"
   }
 }
-
-
