--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -116,7 +116,8 @@
     "overview": "Overview",
     "enterOverview": "Enter patient's overview",
     "save": "Save",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "cardUpdetedSuccess":"Patient's card updated successfully"
   },
   "Profile": {
     "cancel": "Cancel",
