feat: connected frontend to backend to get patient info

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -138,7 +138,8 @@
     "lorem": " Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore"
   },
   "Dashboard": {
-    "backToDashboard": "Back to dashboard"
+    "backToDashboard": "Back to dashboard",
+    "loading": "Loading..."
   },
   "Warning": {
     "viewScheduleWarning": "Warning: you are in view mode and creating new schedule will be done according to your local time!"
