--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -148,7 +148,8 @@
     "deleteTime": "Delete time:",
     "saveSchedule": "Save schedule",
     "selectTimezone": "Time Zone:",
-    "successfullySubmited": "Your schedule has been successfully updated!"
+    "successfullySubmited": "Your schedule has been successfully updated!",
+    "calendar": "Calendar"
   },
   "PatientCard": {
     "overview:": "Overview:",
