--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -153,7 +153,8 @@
   "PatientCard": {
     "overview:": "Overview:",
     "lastAppointment": "Last Appointment:",
-    "viewProfile": "View Profile"
+    "viewProfile": "View Profile",
+    "years": "years"
   },
   "Patients": {
     "createPatient": "Create Patient",
