moved all texts to the file

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -159,6 +159,7 @@
   },
   "NotFoundPage":{
     "notFound":"Page not found ",
-    "doesntExist":"This page you are looking for doesn’t exist or an other occurred."
+    "doesntExist":"This page you are looking for doesn’t exist or an other occurred.",
+    "404":"404"
   }
 }
