add footer of first step form section

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -161,6 +161,9 @@
     "youSelected": "You selected:",
     "date": "Date:",
     "selectTimezone": "Time Zone:",
-    "successfullySubmited": "Your schedule has been successfully updated!"
+    "successfullySubmited": "Your schedule has been successfully updated!",
+    "stepOne":"Step 1/2",
+    "prevStep":"Previous step",
+    "nextStep":"Next step"
   }
 }
