--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -174,6 +174,8 @@
     "located": "Located",
     "rating": "Rating",
     "loadMore":"Load more",
-    "noDoctors":"No doctor with that name is available"
+    "noDoctors":"No doctor with that name is available",
+    "confirm": "Confirm",
+    "appointmentCreated": "Appointment successfully created"
   }
 }
