--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -176,6 +176,7 @@
     "loadMore":"Load more",
     "noDoctors":"No doctor with that name is available",
     "confirm": "Confirm",
-    "appointmentCreated": "Appointment successfully created"
+    "appointmentCreated": "Appointment successfully created",
+    "search": "Search"
   }
 }
