--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -93,7 +93,8 @@
     "overlappingEventsError": "Validation error: working hours overlap",
     "somethingWasWrong":"Sorry, something was wrong!",
     "pastDateError": "You cannot create schedule on a past date!",
-    "calendarSlotError": "Something went wrong!"
+    "calendarSlotError": "Something went wrong!",
+    "noEvents": "No events for this day"
   },
   "Patient": {
     "createPatientCard": "Create patient's card",
