fix: added title to translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -162,5 +162,8 @@
     "notFound":"Page not found ",
     "doesntExist":"This page you are looking for doesn’t exist or an other occurred.",
     "404":"404"
+  },
+  "Appointments": {
+    "myAppointments" : "My appointments:"
   }
 }
