--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,9 +91,7 @@
     "bothDatesRequired": "Validation error: both start and end dates are required",
     "endBeforeStartDateError": "Validation error: end date should be after start date",
     "overlappingEventsError": "Validation error: working hours overlap",
-
     "somethingWasWrong": "Sorry, something was wrong!",
-
     "pastDateError": "You cannot create schedule on a past date!",
     "calendarSlotError": "Something went wrong!"
   },
@@ -124,12 +122,8 @@
     "enterOverview": "Enter patient's overview",
     "save": "Save",
     "cancel": "Cancel",
-
     "cardUpdetedSuccess": "Patient's card updated successfully",
-
-    "lastAppointment": "Last Appointment:"
-
-  },
+    "lastAppointment": "Last Appointment:"  },
   "Profile": {
     "cancel": "Cancel",
     "save": "Save",
@@ -167,7 +161,6 @@
     "youSelected": "You selected:",
     "date": "Date:",
     "selectTimezone": "Time Zone:",
-
     "successfullySubmited": "Your schedule has been successfully updated!",
     "stepOne": "Step 1/2",
     "stepTwo": "Step 2/2",
@@ -184,7 +177,6 @@
     "confirm": "Confirm",
     "appointmentCreated": "Appointment successfully created",
     "search": "Search"
-
   },
   "NotFoundPage":{
     "notFound":"Page not found ",
