--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,7 +91,6 @@
     "bothDatesRequired": "Validation error: both start and end dates are required",
     "endBeforeStartDateError": "Validation error: end date should be after start date",
     "overlappingEventsError": "Validation error: working hours overlap",
-    "somethingWasWrong":  "Sorry, something was wrong!",
     "pastDateError": "You cannot create schedule on a past date!",
     "calendarSlotError": "Something went wrong!",
     "noEvents": "No events for this day",
@@ -124,11 +123,9 @@
     "enterOverview": "Enter patient's overview",
     "save": "Save",
     "cancel": "Cancel",
-    "cardUpdetedSuccess": "Patient's card updated successfully",
-    "lastAppointment": "Last Appointment:"
     "lastAppointment": "Last Appointment:",
     "cardCreatedSuccess": "Patient's card created successfully",
-    "cardUpdetedSuccess":"Patient's card updated successfully",
+    "cardUpdetedSuccess":"Patient's card updated successfully"
   },
   "Profile": {
     "cancel": "Cancel",
