feat: show current Appointment cards

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -157,7 +157,7 @@
     "deleteTime": "Delete time:",
     "saveSchedule": "Save schedule",
     "selectTimezone": "Time Zone:",
-     "successfullySubmited": "Your schedule has been successfully updated!",
+    "successfullySubmited": "Your schedule has been successfully updated!",
     "calendar": "Calendar"
   },
   "BookAppointment": {
@@ -178,8 +178,8 @@
     "speciality": "Speciality",
     "located": "Located",
     "rating": "Rating",
-    "loadMore":"Load more",
-    "noDoctors":"No doctor with that name is available",
+    "loadMore": "Load more",
+    "noDoctors": "No doctor with that name is available",
     "confirm": "Confirm",
     "appointmentCreated": "Appointment successfully created",
     "search": "Search"
@@ -220,6 +220,10 @@
     "loadMore": "Load More"
   },
   "Appointments": {
-    "myAppointments" : "My appointments:"
+    "myAppointments": "My appointments:",
+    "years": "y.o.",
+    "doctor": "Dr.",
+    "remoteDoctor": "Remote",
+    "lastAppointment": "Last Appointment:"
   }
 }
