feat: connected frontend to backend for appointment scheduler

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -220,6 +220,14 @@
     "loadMore": "Load More"
   },
   "Appointments": {
-    "myAppointments" : "My appointments:"
+    "myAppointments" : "My appointments:",
+    "years": "y.o.",
+    "remoteDoctor": "Remote",
+    "localDoctor": "Local",
+    "localDoctorAgenda": "Local doctor",
+    "remoteDoctorAgenda": "Remote doctor",
+    "doctor": "Dr.",
+    "patient": "Patient",
+    "lastAppointment": "Last Appointment"
   }
 }
