--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -144,10 +144,7 @@
     "problem": "Some problem",
     "lorem": " Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore"
   },
-  "Dashboard": {
-    "backToDashboard": "Back to dashboard",
-    "loading": "Loading..."
-  },
+
   "Warning": {
     "viewScheduleWarning": "Warning: you are in view mode and creating new schedule will be done according to your local time!"
   },
@@ -225,7 +222,9 @@
     "myAppointments": "My appointments:"
   },
 
-  "Dahboard": {
+  "Dashboard": {
+    "backToDashboard": "Back to dashboard",
+    "loading": "Loading...",
     "WelcomeDr": "Welcome, Dr.",
     "Notification": "Notification",
     "LatestAppointments": " Latest Appointments",
