fix: replaced the mocked values with the values from the last appointment

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -228,6 +228,7 @@
     "remoteDoctorAgenda": "Remote doctor",
     "doctor": "Dr.",
     "patient": "Patient",
-    "lastAppointment": "Last Appointment"
+    "lastAppointment": "Last Appointment",
+    "noAppointmentsYet": "The patient has no appointments yet"
   }
 }
