--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -219,7 +219,8 @@
     "search": "Search",
     "loadMore": "Load More",
     "PatientWithName": "Patient with name",
-    "notFound": "not fond"
+    "notFound": "not fond",
+    "patients": "Patients"
   },
   "Appointments": {
     "myAppointments": "My appointments:",
