fix: added book appointment button, fixed phone number in create patient card form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -183,7 +183,8 @@
     "noDoctors":"No doctor with that name is available",
     "confirm": "Confirm",
     "appointmentCreated": "Appointment successfully created",
-    "search": "Search"
+    "search": "Search",
+    "button": "Book appointment +"
   },
 
   "Notes": {
