--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -230,6 +230,7 @@
     "LatestAppointments": " Latest Appointments",
     "LoadMore": "Load More",
     "Remote": "Remote",
+    "Local": "Local",
     "Dr.": "Dr.",
     "LastAppointment": "LastAppointment"
   }
