--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -145,7 +145,9 @@
   "Dashboard": {
     "backToDashboard": "Back to dashboard",
     "loading": "Loading...",
-    "goBack": "Go back"
+    "goBack": "Go back",
+    "anesthesiology": "Anesthesiology",
+    "cardiology": "Cardiology"
   },
   "Warning": {
     "viewScheduleWarning": "Warning: you are in view mode and creating new schedule will be done according to your local time!"
