--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -244,6 +244,10 @@
   "Zoom": {
     "Chat": "Chat",
     "Finish": "Finish and call next client",
-    "StartCall": "Start Call"
+    "StartCall": "Start Call",
+    "left": "You left the session",
+    "joined": "You joined the session",
+    "noAppointments": "You have no active appointments",
+    "startCall": "Start Call"
   }
 }
