fix: changed the list of specialties depending on the role of the doctor

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -241,7 +241,7 @@
     "Remote": "Remote",
     "Local": "Local",
     "Dr.": "Dr.",
-    "LastAppointment": "LastAppointment"
+    "LastAppointment": "LastAppointment",
     "myAppointments": "My appointments:",
     "years": "y.o.",
     "remoteDoctor": "Remote",
