--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -124,7 +124,7 @@
     "save": "Save",
     "cancel": "Cancel",
     "cardUpdetedSuccess": "Patient's card updated successfully",
-
+    "noOverviewYet": "The patient has no overview yet",
     "lastAppointment": "Last Appointment:",
     "cardCreatedSuccess": "Patient's card created successfully"
   },
@@ -143,11 +143,6 @@
   "Help": {
     "problem": "Some problem",
     "lorem": " Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore"
-  },
-  "Dashboard": {
-    "backToDashboard": "Back to dashboard",
-    "loading": "Loading...",
-    "goBack": "Go back"
   },
   "Warning": {
     "viewScheduleWarning": "Warning: you are in view mode and creating new schedule will be done according to your local time!"
@@ -228,7 +223,8 @@
     "patients": "Patients"
   },
   "Appointments": {
-    "myAppointments": "My appointments:"
+    "myAppointments": "My appointments:",
+    "noAppointmentsYet": "The patient has no appointments yet"
   },
 
   "Dashboard": {
@@ -251,7 +247,8 @@
     "doctor": "Dr.",
     "patient": "Patient",
     "lastAppointment": "Last Appointment",
-    "noAppointmentsYet": "The patient has no appointments yet"
+    "noAppointmentsYet": "The patient has no appointments yet",
+    "goBack": "Go back"
   },
   "Chat": {
     "typeMessage": "Type your message...",
