--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -144,11 +144,6 @@
     "problem": "Some problem",
     "lorem": " Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore"
   },
-  "Dashboard": {
-    "backToDashboard": "Back to dashboard",
-    "loading": "Loading...",
-    "goBack": "Go back"
-  },
   "Warning": {
     "viewScheduleWarning": "Warning: you are in view mode and creating new schedule will be done according to your local time!"
   },
@@ -230,7 +225,6 @@
   "Appointments": {
     "myAppointments": "My appointments:"
   },
-
   "Dashboard": {
     "backToDashboard": "Back to dashboard",
     "loading": "Loading...",
@@ -241,7 +235,7 @@
     "Remote": "Remote",
     "Local": "Local",
     "Dr.": "Dr.",
-    "LastAppointment": "LastAppointment"
+    "LastAppointment": "LastAppointment",
     "myAppointments": "My appointments:",
     "years": "y.o.",
     "remoteDoctor": "Remote",
@@ -251,7 +245,8 @@
     "doctor": "Dr.",
     "patient": "Patient",
     "lastAppointment": "Last Appointment",
-    "noAppointmentsYet": "The patient has no appointments yet"
+    "noAppointmentsYet": "The patient has no appointments yet",
+    "goBack": "Go back"
   },
   "Chat": {
     "typeMessage": "Type your message...",
