--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -223,7 +223,16 @@
     "patients": "Patients"
   },
   "Appointments": {
-    "myAppointments": "My appointments:"
+    "myAppointments": "My appointments:",
+    "years": "y.o.",
+    "remoteDoctor": "Remote",
+    "localDoctor": "Local",
+    "localDoctorAgenda": "Local doctor",
+    "remoteDoctorAgenda": "Remote doctor",
+    "doctor": "Dr.",
+    "patient": "Patient",
+    "lastAppointment": "Last Appointment",
+    "noAppointmentsYet": "The patient has no appointments yet"
   },
 
   "Dashboard": {
@@ -248,8 +257,6 @@
     "lastAppointment": "Last Appointment",
     "noAppointmentsYet": "The patient has no appointments yet",
     "goBack": "Go back",
-    "backToDashboard": "Back to dashboard",
-    "loading": "Loading...",
     "anesthesiology": "Anesthesiology",
     "cardiology": "Cardiology"
 
