--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -159,7 +159,7 @@
     "calendar": "Calendar"
   },
   "BookAppointment": {
-    "instruction":"Please choose a specialization of a doctor first. Then you will see all available dates, and after that, you can choose a suitable time for your client.",
+    "instruction": "Please choose a specialization of a doctor first. Then you will see all available dates, and after that, you can choose a suitable time for your client.",
     "selectDoctorSpecialization": "Select doctor specialization",
     "selectDay": "Select a day of appointment",
     "SelectAppointmentTime": "Select a time of appointment",
@@ -190,15 +190,18 @@
     "show": "Show",
     "dr": "Dr.",
     "theNoteShouldContainAtLeastSymbols": "The note should contain at least 10 symbols",
-    "hint": "Hint",
+    "hint": "Hint:",
     "description": "Description",
+    "patientsFiles": "Patient's files",
+    "sortBy": "Sort By: ",
+    "sortOrder": "Sort Order: ",
     "add": "Add",
     "addAppointmentNote": "Add appointment note",
     "discardAdding": "Discard adding",
     "loadMore": "Load More",
     "Draganddropyourfilesanywhereor": "Drag and drop your files anywhere or",
     "Upload": "Upload",
-    "ToUpload": "To Upload",
+    "ToUpload": "Uploaded file:",
     "Search": "Search"
   },
   "NotFoundPage": {
