--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -236,8 +236,8 @@
     "remoteDoctorAgenda": "Remote doctor",
     "doctor": "Dr.",
     "patient": "Patient",
-    "lastAppointment": "Last Appointment",
-    "noAppointmentsYet": "The patient has no appointments yet"
+    "lastAppointment": "Last Appointment:",
+    "noAppointmentsYet": "The patient has no appointments yet."
   },
 
   "Dashboard": {
@@ -260,7 +260,7 @@
     "doctor": "Dr.",
     "patient": "Patient",
     "lastAppointment": "Last Appointment",
-    "noAppointmentsYet": "The patient has no appointments yet",
+    "noAppointmentsYet": "The patient has no appointments yet.",
     "goBack": "Go back",
     "anesthesiology": "Anesthesiology",
     "cardiology": "Cardiology"
